Fixed clipping with search bar.

--- a/src/scss/AutosuggestTheme.scss
+++ b/src/scss/AutosuggestTheme.scss
@@ -33,10 +33,10 @@
   &__suggestions-container--open {
     display: block;
     position: absolute;
-    /* left: 0px; */
-    left: 10%;
-    top: 51px;
-    width: 80%;
+    // left: 25px;
+    left: 17.5%;
+    top: 60px;
+    width: 65%;
 
     border: 1px solid #aaa;
     background-color: #fff;
@@ -46,6 +46,8 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     z-index: 99;
+    // padding-left: 25px;
+    // padding-right: 60px;
   }
 
   &__suggestions-list {
